<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:maxWidth="100dp"
                android:src="@drawable/image"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/todo" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/colorBrown"
            android:layout_marginTop="40dp" >
            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:text="@string/requisition"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp" />
            <TextView

                android:id="@+id/TextView01"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle2"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="50dp"
                android:text="@string/no1"
                android:textAlignment="center"
                android:layout_marginStart="50dp"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/textline"
                android:layout_marginLeft="69dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="69dp" />

            <TextView

                android:id="@+id/TextView03"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle2"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="90dp"
                android:text="@string/no2"
                android:textAlignment="center"
                android:layout_marginStart="90dp"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/textline"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="110dp" />

            <TextView

                android:id="@+id/TextView04"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="130dp"
                android:text="@string/no3"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:layout_marginStart="130dp"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/textline"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="150dp" />
            <TextView

                android:id="@+id/TextView05"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle2"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="170dp"
                android:text="@string/no4"
                android:textAlignment="center"
                android:layout_marginStart="170dp"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/textline"
                android:layout_marginLeft="190dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="190dp" />
            <TextView

                android:id="@+id/TextView06"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle2"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="210dp"
                android:text="@string/no5"
                android:textAlignment="center"
                android:layout_marginStart="210dp"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/textline"
                android:layout_marginLeft="230dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="229dp" />
            <TextView

                android:id="@+id/TextView02"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle2"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="250dp"
                android:text="@string/no6"
                android:textAlignment="center"
                android:layout_marginStart="250dp"
                android:layout_alignParentStart="true" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="150dp"
            android:background="@color/colorBack">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:paddingTop="20dp"
                android:text="@string/attibute"
                android:textColor="@color/coloratt"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:paddingTop="10dp"
                android:text="@string/sentence"
                android:textColor="@color/colorsentence"
                 />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/image2"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/todo1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attachfile"
                android:textColor="@color/coloratt"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
               android:layout_marginRight="20dp"
                android:paddingTop="60dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Save"
                android:textStyle="bold"
                android:textColor="@color/colorSave"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:paddingBottom="30dp"
                android:background="@drawable/bottomborder"/>
            <Button
                android:id="@+id/button_id"
                android:layout_height="30dp"
                android:layout_width="wrap_content"
                android:text="NEXT -->"
                android:textSize="12dp"
               android:layout_marginTop="550dp"
                android:layout_alignParentRight="true"
                android:paddingBottom="1dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button"
                android:textColor="#FFFFFF"
                />
        </RelativeLayout>





</RelativeLayout>